frontend/src/css/app.scss
// Font
@font-face {
  font-family: 'Inter';
  src: url(../fonts/Inter-Medium.ttf);
}

// declare a class which applies it
.inter-font {
  font-family: 'Inter';
}

// body
body {
  font-family: 'Inter';
}

// Quasar Overwrites
.q-bar--standard,
.q-bar--dense {
  padding: 0 4px;
}

// Pseudo Classes
.prevent-select {
  -webkit-user-select: none; /* Safari */
  -ms-user-select: none; /* IE 10 and IE 11 */
  user-select: none; /* Standard syntax */
}

.d-block {
  display: block;
}

